--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -20,20 +20,18 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="small-9 small-centered columns">
-    <h3>Web Development Full-Stack</h3>
-    <p>Messenger bag selvage cray, skateboard velit gluten-free small batch disrupt seitan Vice Helvetica meh delectus eu. Austin nihil Tumblr, mlkshk flexitarian selvage blog leggings bespoke velit do minim irony dolore. Forage laborum hella ut odio qui. Wes Anderson butcher mixtape, delectus wolf High Life odio kitsch minim. Officia Godard Etsy eiusmod trust fund Carles, mollit vegan. Qui typewriter actually cardigan. Letterpress post-ironic gastropub locavore, DIY church-key excepteur YOLO laboris Tumblr narwhal freegan est ugh.</p>
+<% @all_courses.each do |course| %>
+  <div class="row">
+    <div class="small-9 small-centered columns">
+      <h3><%= course.title %></h3>
+      <p><%= course.description %></p>
+    </div>
   </div>
-</div>
+<% end %>
 
-<div class="row">
-  <div class="small-9 small-centered columns">
-    <h3>Web Design</h3>
-    <p>Freegan craft beer officia cray cred ad. Craft beer raw denim banjo, distillery kale chips chambray dolor banh mi drinking vinegar hoodie nesciunt. American Apparel meh sriracha McSweeney's sint viral Brooklyn, before they sold out 8-bit Banksy organic keytar kale chips fixie. Hashtag veniam actually, laborum deserunt squid excepteur you probably haven't heard of them minim. Nulla try-hard you probably haven't heard of them cliche. Godard cray paleo ennui Neutra. American Apparel id ugh, hashtag aliqua chillwave Thundercats vero brunch elit readymade swag esse.</p>
-  </div>
-</div>
-<!-- -- Created Courses (view @created)
+
+<!-- -- 
+Created Courses (view @created)
 -- Enrolled Courses (view @enrolled)
 -- Add new Course [only shows up for user owner] -- opens up modal
  -->
