--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,4 @@
-<div class="page-title"> Courses Index </div>
+<div class="page-title"> My Courses </div>
 
 
 <div class="row">
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<% @all_courses.each do |course| %>
+<% @created_courses.each do |course| %>
   <div class="row">
     <div class="small-9 small-centered columns">
       <h3><%= course.title %></h3>
