starting scaffolding site index

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Sites#index</h1>
-<p>Find me in app/views/sites/index.html.erb</p>
+<h1 id="tag_line">beautifully organzie online resources<br>
+to create DIY curriculums</h1>
+
+<div id="index_graphic">
+<%= image_tag("diy_display_example.png")%>
+</div>
+
+<hr id="first_line">
+
+<div id="boxes_holder">
+  <div class="box">
+  <div class="box">
+  <div class="box">
+</div>
