--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,14 +1,27 @@
 <h1 id="tag_line">beautifully organzie online resources<br>
-to create DIY curriculums</h1>
+to create DIY curricula</h1>
 
 <div id="index_graphic">
 <%= image_tag("diy_display_example.png")%>
 </div>
 
-<hr id="first_line">
+<hr class="line">
+
+<h3 id="featured">featured curricula</h3>
 
 <div id="boxes_holder">
   <div class="box">
-  <div class="box">
-  <div class="box">
+    <p class="box_text">intro to chemistry</p>
+    <%= image_tag("lab-flask_128.png")%>
 </div>
+  <div class="box">
+    <p class="box_text">learning RUBY</p>
+    <%= image_tag("laptop_128.png")%>
+  </div>
+  <div class="box">
+    <p class="box_text">drawing landscapes</p>
+    <%= image_tag("pens-pencils_128.png")%>
+  </div>
+</div>
+
+<hr class="line">
