--- a/app/views/courses/_new.html.erb
+++ b/app/views/courses/_new.html.erb
@@ -2,7 +2,7 @@
   <%= form_for :course, url: courses_path do |c| %>
     <%= c.text_field :title, placeholder: "Course title" %>
     <%= c.text_area :description, placeholder: "what is this course about?" %>
-    <%= c.select "categories", options_from_collection_for_select(@categories, "id", "name"), prompt: "Categories" %>
+    <%= c.select :category_id, options_from_collection_for_select(@categories, "id", "name"), prompt: "Categories" %>
     <%= c.submit "create", class: "button large" %>
   <% end %>
   <a class="close-reveal-modal">&#215;</a>
