show user name in course show view

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -13,7 +13,7 @@ Course at a Glance [reviews//views//enrollments//upvotes//hours per section] -->
 
 <div class="row">
   <div class="small-9 small-centered columns">
-    <p>Created by: <%= @course.user_id %></p>
+    <p>Created by: <%= @user.name %></p>
   </div>
 </div>
   
