finished first iteration of index

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -7,20 +7,57 @@ to create DIY curricula</h1>
 
 <hr class="line">
 
-<h3 id="featured">featured curricula</h3>
+<h3 id="featured">featured curricula:</h3>
 
 <div id="boxes_holder">
   <div class="box">
-    <p class="box_text">intro to chemistry</p>
+    <span class="box_text">intro to<br>chemistry</span>
     <%= image_tag("lab-flask_128.png")%>
 </div>
   <div class="box">
-    <p class="box_text">learning RUBY</p>
+    <span class="box_text">create your<br>first<br>Rails app</span>
     <%= image_tag("laptop_128.png")%>
   </div>
   <div class="box">
-    <p class="box_text">drawing landscapes</p>
+    <span class="box_text">landscape<br>drawing</span>
     <%= image_tag("pens-pencils_128.png")%>
+  </div>
+</div>
+
+<hr class="line">
+
+<h3 id="add_curriculum">add your own curriculum</h3>
+<div id="add_c_image"><%= image_tag("file02_128.png")%></div>
+
+<hr class="line">
+
+<div class="row">
+  <div class="small-4 columns">
+    <ol class="cat_list">
+      <li>example category</li>
+      <li>example category</li>
+      <li>example category</li>
+      <li>example category</li>
+      <li>example category</li>
+    </ol>
+  </div>
+  <div class="small-4 columns">
+    <ol class="cat_list">
+      <li>example category</li>
+      <li>example category</li>
+      <li>example category</li>
+      <li>example category</li>
+      <li>example category</li>
+    </ol>
+  </div>
+    <div class="small-4 columns">
+    <ol class="cat_list">
+      <li>example category</li>
+      <li>example category</li>
+      <li>example category</li>
+      <li>example category</li>
+      <li>example category</li>
+    </ol>
   </div>
 </div>
 
