--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -24,29 +24,58 @@ height: 150px;
 margin-left: 40px;
 margin-right: 40px;
 background: lightgrey;
+background-image: "assets";
+}
+
+#boxes_holder{
+text-align:center;
+margin-bottom: 40px;
 }
 
 .box_text {
-display: none;
+text-align: center;
+position:absolute;
+margin-top:20px;
+opacity: 0;
 }
 
 .box:hover .box_text {
-display: inline-block;
+opacity: 1;
 }
 
 .box:hover img {
-display: none;
+opacity:0;
 }
 
 .box:hover{
 background:lightblue;
 }
 
-#boxes_holder{
- text-align:center;
+#featured{
+text-align:center;
+margin:40px;
 }
 
-#featured{
-  text-align:center;
-  margin:40px;
+#add_curriculum{
+text-align:center;  
+}
+
+#add_c_image{
+text-align:center;
+}
+
+.cat_list {
+margin-left: 1.4rem;
+text-align: center;
+text-decoration: none;
+list-style-type: none;
+}
+
+div.row > div:nth-child(2) {
+border-left: 2px solid;
+border-right: 2px solid;
+}
+
+.row{
+margin-bottom: 30px;
 }
