added course descripiton to course show

--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -1,8 +1,12 @@
 .page-title{
   text-align: center;
-  padding: 50px;
+  padding: 50px 0 10px 0 ;
 }
 
 .add-course {
   text-align: right;
+}
+
+a > p {
+color: black;
 }
