--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -23,19 +23,29 @@ Course at a Glance [reviews//views//enrollments//upvotes//hours per section] -->
 </div>
   
 <div class="row">
-  <div class="small-4 small columns">
-    <% @course.sections.each do |s| %>
-          <h3><%= s.title %></h3>
-    <% end %>
-   </div>
+  <div class="small-9 small-centered columns">
 
-  <div class="small-4 small columns">
-    <h3>Course at a Glance</h3>
-    <h4>Category: <%= @course.category.name %></h4>
-    <h4># of Sections: <%= @course.sections.count %></h4>
+    <div class="row">    
+      <div class="small-4 small columns">
+        <h3>Sections<h3>
+        <% @course.sections.each do |s| %>
+              <h5><%= s.title %></h5>
+        <% end %>
+      </div>
+
+      <div class="small-5 small columns">
+        <h3>Course at a Glance</h3>
+        <h4>Category: <%= @course.category.name %></h4>
+        <h4># of Sections: <%= @course.sections.count %></h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="small-9 columns">
+      ---------------------------</br>
+      Needs to add reviews
+      </div>
+    </div>
+
   </div>
-</div>
-
-<div class="row">
-  Needs to add reviews
 </div>
