linked course browse view to course show view

--- a/app/views/courses/browse_all.html.erb
+++ b/app/views/courses/browse_all.html.erb
@@ -3,8 +3,10 @@
 <% @all_courses.each do |course| %>
   <div class="row">
     <div class="small-9 small-centered columns">
-      <h3><%= course.title %></h3>
-      <p><%= course.description %></p>
+      <a href="/courses/<%= course.id%>">
+        <h3><%= course.title %></h3>
+        <p><%= course.description %></p>
+      </a>
     </div>
   </div>
 <% end %>
