ignore show page comment

--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,3 +1,4 @@
+<!-- ignore this show page for now -- not working-->
 <div class="row">
   <%= render 'sidebar' %>
   <%= render "/contents/index" %>
