--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,19 +1,3 @@
 <div class="row">
-  <div class="large-3 medium-4 columns">
-    <div class="hide-for-small">
-      <div class="sidebar">
-        <h5>Sections</h5>
-        <nav>
-          <ul class="side-nav">
-            <% @sections.each do |section| %>
-              <li>
-                <%= section.title %>
-              </li>
-            <% end %>
-            <li>
-               <%= render "new"%>
-            </li>
-          </ul>
-    </div>
-  </div>
+  <%= render 'sidebar' %>
 </div>
