sections are appending and persisting properly, but not relation to user

--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,6 +1,8 @@
     <div id="sections">
     </div>
 
+
     <form id="addSection">
-        <input id="section_name" type='text' name="section[name]">
+        <input id="section_title" type='text' name="section[title]">
     </form>
+
