turned each section into a link to edit

--- a/app/assets/javascripts/templates/section.hbs
+++ b/app/assets/javascripts/templates/section.hbs
@@ -1,4 +1,4 @@
 <div class="section" data-id="{{id}}">
-  <div>{{title}}</div>
+  <div><a href="/courses/{{course_id}}/sections/{{id}}/edit">{{title}}</a></div>
   </div>
 </div>
