--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,8 +3,8 @@
         <li class="name">
              <h1><a href="#">+</a></h1>
         </li>
-<!--         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
-        </li> -->
+        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+        </li>
     </ul>
     <section class="top-bar-section">
       <% if signed_in? %>
