--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1,7 +1,9 @@
 //
 // FOUNDATION SETTINGS
 //
-
+body, html {
+  height: 100%;
+}
 // This is the default html and body font-size for the base rem value.
 // $rem-base: 16px;
 
