--- a/app/views/sections/_sidebar.html.erb
+++ b/app/views/sections/_sidebar.html.erb
@@ -1,17 +1,21 @@
-<div class="large-3 medium-4 columns">
-    <div class="hide-for-small">
-      <div class="sidebar">
-        <h5>Sections</h5>
-        <nav>
-          <ul class="side-nav">
-            <% @sections.each do |section| %>
-              <li>
-                <%= section.title %>
-              </li>
-            <% end %>
-            <li>
-               <%= render "new"%>
-            </li>
-          </ul>
-    </div>
+<div class="small-4 columns sidebar-column">
+  <div class="sidebar">
+    <h3 class="sidebar-course-title">
+      <%=@course.title%>
+    </h3>
+    <h5 class="sidebar-cagetory-title">
+      <%=@category.name%>
+    </h5>
+    <nav>
+      <ul class="side-nav">
+        <% @sections.each do |section| %>
+          <li>
+            <%= section.title %>
+          </li>
+        <% end %>
+        <li>
+           <%= render "new"%>
+        </li>
+      </ul>
   </div>
+</div>
