--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,8 +1,3 @@
-    <div id="sections">
-    </div>
-
-
-    <form id="addSection">
-        <input id="section_title" type='text' name="section[title]">
-    </form>
-
+<div class="row content-view">
+  <%= render 'sidebar' %>
+</div>
