--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,11 +13,11 @@
 
  *= require_tree .
  */
-
+/*
 @import "foundation_and_overrides";
-/* Add imports of custom sass/scss files here */
+ Add imports of custom sass/scss files here 
 @import "courses";
 @import "sections";
 @import "index";
-
+*/
 
