added content grid (fixed some div naming on index)

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -41,7 +41,7 @@ to create DIY curricula</h1>
       <li>example category</li>
     </ol>
   </div>
-  <div class="small-4 columns">
+  <div class="small-4 columns middle-column">
     <ol class="cat_list">
       <li>example category</li>
       <li>example category</li>
