--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -71,7 +71,7 @@ text-decoration: none;
 list-style-type: none;
 }
 
-div.row > div:nth-child(2) {
+.middle-column {
 border-left: 2px solid;
 border-right: 2px solid;
 }
