can create/append content w/json

--- a/app/views/contents/_new.html.erb
+++ b/app/views/contents/_new.html.erb
@@ -1,5 +1,5 @@
 <div id="new-content" >
-  <%= form_for :content, url: '', method: :post do |c| %>
+  <%= form_for :content, url: course_section_contents_path(format: :json), method: :post do |c| %>
     <%= c.text_field :source_url, placeholder: "Resource link" %>
     <%= c.text_area :text, placeholder: "How did you use this resource?" %>
     <%= c.submit "create", class: "button large" %>
