--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -2,7 +2,10 @@
     </div>
 
 
-    <form id="addSection">
-        <input id="section_title" type='text' name="section[title]">
-    </form>
+    <div id="addSection">
+        <%= form_for :section, url: course_sections_path(format: :json), method: :post do |s| %>
+          <%= s.text_field :title, placeholder: "Section Name" %>
+          <%= s.submit %>
+        <%end%>
+    </div>
 
