more styling to sections

--- a/app/views/sections/_sidebar.html.erb
+++ b/app/views/sections/_sidebar.html.erb
@@ -1,16 +1,17 @@
 <div class="small-4 columns sidebar-column">
   <div class="sidebar">
 
-    <h3 class="sidebar-course-title">
-      <%=@course.title%>
-    </h3>
-    <h5 class="sidebar-cagetory-title">
-      <%=@category.name%>
-    </h5>
-
+    <div class="sidebar-title">
+      <h3 class="sidebar-course-title">
+        <%=@course.title%>
+      </h3>
+      <h5 class="sidebar-cagetory-title">
+        <%=@category.name%>
+      </h5>
+    </div>
     <nav>
       <ul class="side-nav">
-        <li>
+        <li >
          <div id="sections"></div>
         </li>
         <li>
