--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -1,10 +1,13 @@
 .content-column {
   height: 100%;
+  padding: 0 20px 0 5px;
 }
 
 .content {
   background: white;
-  padding: 8px, ;
+  padding: 8px;
   height: 100%;
+  overflow: auto;
+
 
 }
