--- a/app/assets/stylesheets/sections.scss
+++ b/app/assets/stylesheets/sections.scss
@@ -14,24 +14,45 @@ body, html {
 }
 
 .sidebar-column {
-  height:100%;
+  height: 100%;
+  padding: 0 5px 0 20px;
 
 }
 
 .sidebar  {
   background: white;
-  padding: 8px;
   height: 100%;
+  overflow: auto;
+
+}
+
+.sidebar-title  {
+  padding: 16px 32px 16px 32px;
 }
 
 .row {
-   width: 100%;
-   margin-left: auto;
-   margin-right: auto;
-   max-width: initial;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: initial;
 }
 
 .sidebar-course-title {
   margin-bottom: -5px;
 }
 
+.section {
+  border-top: .07rem solid;
+  border-color: lightGray;
+
+}
+
+.section a {
+  padding: 24px 12px 24px 32px;
+  font-size: 1.5em;
+
+}
+
+.side-nav li a {
+  color: black
+}
