--- a/app/assets/stylesheets/sections.scss
+++ b/app/assets/stylesheets/sections.scss
@@ -1,9 +1,12 @@
 body {
   background: #efece6;
+  font-weight: 300;
 }
 
 body, html {
-  height: 100%;
+  margin:0;
+  padding:0;
+  height:100%;
  }
 
 .content-view {
