added sections show page

--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,6 +1,4 @@
-
-  <%= render "/contents/index" %>
+<div class="row content-view">
   <%= render 'sidebar' %>
-<!-- ignore this show page for now -- not working-->
-
-<div class="row"></div>
+  <%= render 'content' %>
+</div>
