--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,4 +1,4 @@
 <div class="row content-view">
-  <%= render 'sidebar' %>
-  <%= render 'content' %>
+  <%= render 'show_sidebar' %>
+  <%= render 'show_content' %>
 </div>
