implemented edit page with partials

--- a/app/views/sections/_content.html.erb
+++ b/app/views/sections/_content.html.erb
@@ -1,5 +1,9 @@
 <div class="small-9 columns content-column">
   <div class="content">
+    <div id="addContent">
+    </div>
+    <div id="contents">
+    </div> 
   </div>
-
 </div>
+
