--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -1,7 +1,7 @@
-<div id="addContent">
+<div class="row content-view">
+  <%= render 'edit_sidebar' %>
+  <%= render 'content' %>
 </div>
-<div id="contents">
-</div> 
 
 
 <!-- do we need this script here? -->
