--- a/app/views/sections/_content.html.erb
+++ b/app/views/sections/_content.html.erb
@@ -1,5 +1,8 @@
+
+
 <div class="small-9 columns content-column">
   <div class="content">
+    <a href="#" data-reveal-id="edit-section"><%= @section.title %></a>
     <div id="addContent">
     </div>
     <div id="contents">
@@ -7,3 +10,11 @@
   </div>
 </div>
 
+
+<div id="edit-section" class="reveal-modal" data-reveal>
+    <%= form_for @section, url: course_section_path, method: :post do |s| %>
+      <%= s.text_field :title, placeholder: "Section Name" %>
+      <%= s.submit %>
+    <%end%>
+  <a class="close-reveal-modal">&#215;</a>
+</div>
