added controller method for update section, fixed url path in edit_section_form

--- a/app/views/sections/_edit_section_form.html.erb
+++ b/app/views/sections/_edit_section_form.html.erb
@@ -1,5 +1,5 @@
 <div id="edit-section" class="reveal-modal" data-reveal>
-    <%= form_for @section, url: course_section_path, method: :post do |s| %>
+    <%= form_for @section, url: course_section_path, method: :patch do |s| %>
       <%= s.text_field :title, placeholder: "Section Name" %>
       <%= s.submit %>
     <%end%>
