--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,34 +2,40 @@
 
 
 <div class="row">
-  <div class="small-9 small-centered columns">
+  <div class="small-10 medium-8 large-6 small-centered columns">
     <div class="row">
 
-      <div class="small-2 columns created">
-        Created
-      </div>
-      <div class="small-2 columns enrolled">
-        Enrolled
-      </div>
-      <div class="small-4 columns add-course">
-        <a href="#" data-reveal-id="new-course">New</a>
-        <%= render "new"%>
-      </div>
+      <dl class="tabs" data-tab>
+          <dd class="active"><a href="#created">
+            Created
+          </a></dd>
+          <dd><a href="#enrolled">
+            Enrolled
+          </a></dd>
+        <div class="small-12 columns add-course">
+          <a href="#" data-reveal-id="new-course">New</a>
+          <%= render "new"%>
+        </div>
+      </dl>
 
     </div>   
   </div>
 </div>
 
-<% @created_courses.each do |course| %>
-  <div class="row">
-    <div class="small-9 small-centered columns">
-      <a href="/courses/<%= course.id%>">
-        <h3><%= course.title %></h3>
-        <p><%= course.description %></p>
-      </a>
-    </div>
+<div class="tabs-content">
+  <div class="content active" id="created">
+    <% @created_courses.each do |course| %>
+      <div class="row">
+        <div class="small-10 medium-8 large-6 small-centered columns">
+          <a href="/courses/<%= course.id%>">
+            <h3><%= course.title %></h3>
+            <p><%= course.description %></p>
+          </a>
+        </div>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
  
 
 <!-- -- 
