edits for new enrollments relationship

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -13,6 +13,7 @@ Course at a Glance [reviews//views//enrollments//upvotes//hours per section] -->
       <p><%= @course.description%><p>
     </a>
     <%= render "edit"%>
+    <button id="enroll">Enroll</button>
   </div>
 </div>
 
