update content modal pops up

--- a/app/assets/javascripts/templates/contents_form.hbs
+++ b/app/assets/javascripts/templates/contents_form.hbs
@@ -1,4 +1,4 @@
-<form action="{{content_path}}" method="post">
+<form id="test" action="{{content_path}}" method="post">
   <input id="content_source_url" name="content[source_url]" placeholder="Resource link" type="text">
   <textarea id="content_text" name="content[text]" placeholder="How did you use this resource?"></textarea>
   <input class="button large" name="commit" type="submit" value="create">
