--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -1,3 +1,4 @@
+<!-- Form to add a Section - in the Edit Sidebar -->
 <div id="addSection">
     <%= form_for :section, url: course_sections_path(format: :json), method: :post do |s| %>
       <%= s.text_field :title, placeholder: "Section Name" %>
