--- a/app/views/sections/_intro.html.erb
+++ b/app/views/sections/_intro.html.erb
@@ -1,5 +1,5 @@
+<!-- This is where the graphic for intro goes -->
 <div class="small-9 columns content-column">
   <div class="intro-column">
   </div>
-
 </div>
