--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -1,5 +1,8 @@
+<!-- Edit Mode: When clicking on section, you get redirected to section/edit -->
 <div class="row content-view">
+  <!-- This is the sidebar to add sections -->
   <%= render 'edit_sidebar' %>
-  <%= render 'content' %>
+  <!-- This renders adding new content page -->
+  <%= render 'edit_content' %>
 </div>
 
