--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,4 +1,8 @@
+
+<!--  Edit Mode: This is where you end up when you add new course -->
 <div class="row content-view">
-  <%= render 'sidebar' %>
+  <!-- This is the sidebar so we can add new sections -->
+  <%= render 'edit_sidebar' %>
+  <!-- Rendering instructions on how to add/edit sections/contents -->
   <%= render 'intro' %>
 </div>
