--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,4 +1,7 @@
+<!-- View Mode: This is the view for showing the sections and contents -->
 <div class="row content-view">
+  <!-- This displays all sections on the left side (ERB) -->
   <%= render 'show_sidebar' %>
+  <!-- This displays all contents on the right side (ERB) -->
   <%= render 'show_content' %>
 </div>
