working on update content modal

--- a/app/assets/javascripts/templates/contents.hbs
+++ b/app/assets/javascripts/templates/contents.hbs
@@ -6,7 +6,7 @@
     <form id="edit_content_form" action="{{content_path}}" method="post">
       <input id="update_content_source_url" name="content[source_url]" placeholder="Resource link" type="text">
       <textarea id="update_content_text" name="content[text]" placeholder="How did you use this resource?"></textarea>
-      <input id="update_content_button" class="button large" name="commit" type="submit" value="create">
+      <input id="update_content_button" class="button large" name="commit" type="submit" value="update">
     </form>
     <a class="close-reveal-modal">&#215;</a>
   </div>
