--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -35,7 +35,7 @@
       </div>
     <% end %>
   </div>
-  <div class="content active" id="enrolled">
+  <div class="content" id="enrolled">
   <% @enrolled_courses.each do |course| %>
     <div class="row">
       <div class="small-10 medium-8 large-6 small-centered columns">
