--- a/app/views/courses/_new.html.erb
+++ b/app/views/courses/_new.html.erb
@@ -1,14 +1,27 @@
 <script>
 function validateForm()
 {
-var c_title=$("#new-course form #course_title");
-if (c_title.val()==null || c_title.val()=="")
-  {
-  c_title.val("Please fill in Course Name");
-  document.getElementById("course_title").style.color = "red";
-  return false;
-  }
-}
+    var inputs = [];
+    inputs[0] = document.getElementById("course_title");
+    inputs[1] = document.getElementById("course_description");
+
+    for ( i =0; i < inputs.length; i++) {
+      if (inputs[i].value === "" || inputs[i].value === null ){
+        inputs[i].value = "Fill me in!";
+        inputs[i].style.color = "red";
+        return false;
+      };
+      if (inputs[i].value !== "" || inputs[i].value !== null ){
+        inputs[i].style.color = "black";
+      };
+    };
+  var input_cat = document.getElementById("course_category_id")
+
+  if (input_cat.value === "" || input_cat.value == null ){
+      input_cat.value = 10;
+      return false;
+    };
+  };
 </script>
 <div id="new-course" class="reveal-modal" data-reveal>
   <%= form_for :course, url: courses_path, :html => { :onsubmit => "return validateForm()" } do |c| %>
