fixed course owner enrollment ability

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -18,6 +18,7 @@ Course at a Glance [reviews//views//enrollments//upvotes//hours per section] -->
       <div id="toggles">
         <button id="unenroll">Unenroll</button>
         <button id="enroll" class="hidden">Enroll</button>
+      <% elsif @ownCourse %>
       <% else %>
       <div id="toggles">
         <button id="enroll">Enroll</button>
