--- a/app/assets/stylesheets/sections.scss
+++ b/app/assets/stylesheets/sections.scss
@@ -30,7 +30,7 @@ body, html {
 }
 
 .sidebar-title  {
-  padding: 16px 32px 16px 32px;
+  padding: 16px 0px 16px 32px;
 }
 
 .row {
@@ -58,4 +58,14 @@ body, html {
 
 .side-nav li a {
   color: black
+}
+
+.fi-widget {
+  font-size: 30px;
+  text-align: right;
+}
+
+.fi-check {
+  font-size: 30px;
+  text-align: right;
 }
