--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -10,8 +10,8 @@ Course at a Glance [reviews//views//enrollments//upvotes//hours per section] -->
   <div class="small-9 small-centered columns">
     <a href="#" data-reveal-id="edit-course">
       <h3 class="page-title" ><%= @course.title %><h3>
-      <p><%= @course.description%><p>
     </a>
+      <p><%= @course.description%><p>
     <%= render "edit"%>
 
       <% if @enrolled %>
@@ -41,7 +41,9 @@ Course at a Glance [reviews//views//enrollments//upvotes//hours per section] -->
       <div class="small-4 small columns">
         <h3>Sections<h3>
         <% @course.sections.each do |s| %>
-              <h5><%= s.title %></h5>
+          <a href="/courses/<%= @course.id%>/sections/<%= s.id%>">
+            <h5><%= s.title %></h5>
+          </a>
         <% end %>
       </div>
 
