trying to get current_user id to not change, still not working

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -30,7 +30,7 @@ Course at a Glance [reviews//views//enrollments//upvotes//hours per section] -->
 
 <div class="row">
   <div class="small-9 small-centered columns">
-    <p>Created by: <%= @user.name %></p>
+    <p>Created by: <%= @author.name %></p>
   </div>
 </div>
   
