partials toggling, minimal layout complete

--- a/app/views/sites/_index_content.html.erb
+++ b/app/views/sites/_index_content.html.erb
@@ -21,7 +21,7 @@
 </ol>
 <!-- the count_from gets appended to count_to -->
 <div id="count_from">
-   <!--  <h3><%#=@section.title%></h3> -->
+    <h3>My awesome course</h3> 
     <% total_words = array.sum { |e| e.to_i } %>
     section word count: <%= total_words %><br>
     <% wpm = (total_words / 200) %>
