--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,36 +1,27 @@
 <h1 id="tag_line">create beautiful DIY lesson plans<br>
-with online resources</h1>
+with online resources<br>
+</h1>
 
-<!-- <div class="partial_button">
-<%= image_tag("pens-pencils_128.png")%>
-</div> -->
-
-<hr class="line">
-
-<div id="boxes_holder">
-  <div class="partial_button">
-    <span class="box_text">intro to<br>chemistry</span>
-    <%= image_tag("lab-flask_128.png")%>
-</div>
-  <div class="box">
-    <span class="box_text">create your<br>first<br>Rails app</span>
-    <%= image_tag("laptop_128.png")%>
-  </div>
-  <div class="box">
-    <span class="box_text">landscape<br>drawing</span>
-    <%= image_tag("pens-pencils_128.png")%>
-  </div>
-</div>
-
-
+<div class="toggle_button">(see example)</div>
 
 <div id="index_partial">
 <%= render 'index_content' %>
 </div>
 
 
-<style>
+<div id="boxes_holder">
+  <div class="box">
+    <%= image_tag("file02_128.png")%>
+    create
+  </div>
 
+  <div class="box">
+    <%= image_tag("magnifying-glass_128.png")%>
+    browse
+  </div>
+</div>
+
+<style>
 #boxes_holder > div.partial_button {
 display: inline-block;
 padding: 30px;
@@ -41,18 +32,62 @@ margin-right: 40px;
 background: lightgrey;
 }
 
+.toggle_button{
+text-align: center;
+color: rgb(43, 148, 182);
+font-size: 120%;
+margin-bottom: 50px;
+}
+
+.toggle_button img{
+width: 70px;
+}
+
+#index_partial {
+display: none;
+width: 80%;
+margin-left: auto;
+margin-right: auto;
+background: white;
+padding: 50px;
+margin-bottom: 50px;
+}
+
+.box {
+display: inline-block;
+padding: 30px;
+width: 150px;
+height: 150px;
+margin-left: 40px;
+margin-right: 40px;
+background: lightgrey;
+}
+
+#boxes_holder{
+text-align:center;
+margin-bottom: 40px;
+}
+
+.box:hover{
+background:lightblue;
+}
+
+#tag_line{
+text-align: center;
+margin-top: 30px;
+}
+
 </style>
 
-
 <script>
-$("#boxes_holder").click(function(){
-  $(this).next('#index_partial').toggle('medium');
-  //   if ($(this).text() === "+") {
-  //     $(this).text("-");
-  //   }
-  //   else 
-  //     $(this).text("+");
-   }
+$(".toggle_button").click(function(){
+  $('#index_partial').toggle('medium');
+    if ($(".toggle_button").text() === "(see example)") {
+      $(".toggle_button").text("(close example)");
+    }
+    else 
+      $(".toggle_button").text("(see example)");
+  }
 );
 </script>
 
