--- a/app/views/sections/_edit_section_form.html.erb
+++ b/app/views/sections/_edit_section_form.html.erb
@@ -1,3 +1,7 @@
+<script>
+  //empty input value
+  document.getElementById("section_title").value = "";
+</script>
 <div id="edit-section" class="reveal-modal" data-reveal>
     <%= form_for @section, url: course_section_path, method: :patch do |s| %>
       <%= s.text_field :title, placeholder: "Section Name" %>
